Fix Winner Section Design Issue

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                         <div>
                             
                         <h2 class="bg-slate-300 px-4 py-2 rounded-t-lg">Winner</h2>
-                        <ol id="display-winner" class="bg-slate-50 rounded-t-lg flex flex-col">
+                        <ol id="display-winner" class="bg-slate-50 rounded-b-lg flex flex-col">
                         </ol>
                         </div>
                         <div>
